# makestatus

./: CMakeLists.txt  ProjectHome.md  README
applet/: CMakeLists.txt  makestatusapplet.cpp  makestatusapplet.h  plasma-applet-makestatus.desktop
dataengine/: CMakeLists.txt  makestatusengine.h
makeinvoker/: CMakeLists.txt  makeinvoker.cpp  makeinvoker.h
trunk/dataengine/: makestatusengine.cpp  org.MakeStatusEngine.xml  plasma-engine-makestatus.desktop
trunk/makeinvoker/: main.cpp  makeinvoker.notifyrc
